--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,27 @@
     margin: 0;
     box-sizing: border-box;
 }
+
+.container {
+    width: 50%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 0 auto;
+    background-color: rgb(105, 100, 163);
+}
+
+h1 {
+    margin: 0 auto;
+    color: white;
+}
+
+ul {
+    color: rgb(170, 20, 20);
+    list-style-type: none;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    margin: 0 auto;
+}
